crates/testing/compiletest-integration/tests/ui/match-pattern-type-mismatch.stderr
error: type mismatch in pattern: expected i64, found String
 --> tests/ui/match-pattern-type-mismatch.rs:4:9
  |
4 |         "string" => 1,
  |         ^^^^^^^^ expected i64, found String
